kubernetes/test/app-test-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: your-dockerhub-username/salamander-api:latest
          ports:
            - containerPort: 5000
          env:
            - name: REDIS_HOST
              value: redis-db
